# gpgpu-particle-engine

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Doxyfile.in  README  README.md  buildutils.sh  configure
docs/docbook/: CMakeLists_8txt.xml  index.xml
docs/html/: globals.html  globals_func.html  index.html
docs/html/search/: functions_0.js  searchdata.js
docs/latex/: refman.tex
include/: Frame.hpp  GLShader.hpp  GLTexture.hpp  ParticleSet.hpp  ParticleShaders.hpp  ParticleSystem.hpp  compiler_magic.hpp  config.hpp  util.hpp
media/shaders/: particle.frag.glsl  particle.vert.glsl
src/: CMakeLists.txt  GLShader.cpp  GLTexture.cpp  Makefile  ParticleKernel.cpp  ParticleShaders.cpp  ParticleSystem.cpp  config.hpp.in.cmake  frame.cpp  frame.hpp  glerr.hpp  main.cpp  main.ui  util.hpp
src/kernels/: particle.cl  particle.cl.hpp  particle_frag.glsl  particle_frag.glsl.hpp  particle_vert.glsl  particle_vert.glsl.hpp
