CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(gpgpu-particle-engine)
SET(gpgpu-particle-engine_VERSION_MAJOR 1)
SET(gpgpu-particle-engine_VERSION_MINOR 0)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/../CMakeModules)
IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  ADD_DEFINITIONS(-DWIN32)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  ADD_DEFINITIONS(-DLINUX)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
ADD_CUSTOM_COMMAND(
  OUTPUT ${PROJECT_BINARY_DIR}/particle_hex.hpp
  COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_SOURCE_DIR}/kernels/particle.cl ${PROJECT_BINARY_DIR}
  COMMAND xxd -i particle.cl ${PROJECT_BINARY_DIR}/particle_hex.hpp
  DEPENDS ${PROJECT_SOURCE_DIR}/kernels/particle.cl
)
FIND_PACKAGE(OpenCL REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEW   REQUIRED)
FIND_PACKAGE(GLM    REQUIRED)
FIND_PACKAGE(DevIL  REQUIRED)
CONFIGURE_FILE(
  "${PROJECT_SOURCE_DIR}/config.h.in"
  "${PROJECT_BINARY_DIR}/config.h"
)
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR} ${OPENCL_INCLUDE_DIR} ${OPENGL_INCLUDE_DIRS} ${GLEW_INCLUDE_PATH} ${GLM_INCLUDE_DIRS} ${IL_INCLUDE_DIRS})
ADD_EXECUTABLE(gpgpu-particle-engine main.cpp frame.cpp ${PROJECT_BINARY_DIR}/particle_hex.hpp)
TARGET_LINK_LIBRARIES(gpgpu-particle-engine glfw ${OPENCL_LIBRARY} ${OPENGL_LIBRARIES} ${GLEW_LIBRARY} ${IL_LIBRARIES})
