FILE(GLOB_RECURSE project_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)
SET(project_LIBS ${Boost_LIBRARIES} ${LOG4CXX_LIBRARY_DIRS} ${OpenCL_LIBRARIES} ${GLEW_LIBRARIES} ${GLFW_STATIC_LIBRARIES} ${IL_LIBRARIES})
SET(project_BIN ${PROJECT_NAME})

#
# Platform defines
#
IF (WIN32)
  ADD_DEFINITIONS(-DWIN32)
ELSE()
  ADD_DEFINITIONS(-DLINUX)
ENDIF()

ADD_EXECUTABLE(${project_BIN} ${project_SRCS})
TARGET_LINK_LIBRARIES(${project_BIN} ${project_LIBS})
SET_TARGET_PROPERTIES(${project_BIN} PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${project_BIN} CLEAN_DIRECT_OUTPUT 1)

INSTALL(TARGETS ${project_BIN} DESTINATION bin)
